# temporary_vhdl_parser

./: .clang-tidy  .cspell_ignored  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  makefile  peglib.h  vcpkg-configuration.json  vcpkg.json  vhdl_parser.cpp
.github/workflows/: ci.yaml  pull-request-rule.yaml
example/: hello.vhd
parse/: CMakeLists.txt  parse.hpp  parse_vhdl_2008.cpp  peglib.h
parser/: vhdl_parser.cpp
